--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "src": "api/**/*.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/sse", "dest": "/api/sse.js" }
+    { "src": "/api/sse", "dest": "/api/sse.js" },
+    { "src": "/api/mcp", "dest": "/api/mcp.js" }
   ]
 } 
