--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/lisiting01/revit-mcp#readme",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
+    "@vercel/mcp-adapter": "^0.7.3",
     "ws": "^8.18.1",
     "zod": "^3.24.2"
   },
