--- a/vercel.json
+++ b/vercel.json
@@ -5,9 +5,9 @@
   ],
   "routes": [
     {
-      "src": "/api/mcp",
+      "src": "^/api/mcp$",
       "methods": ["GET","POST","DELETE"],
-      "dest": "api/mcp.js"
+      "dest": "/api/mcp.js"
     }
   ]
 } 
